--- a/web_template.html
+++ b/web_template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Emscripten-Generated Code</title>
+    <title>Organic Soup</title>
     <style>
         .title {
           font-family: Arial, sans-serif;
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <div class="title">Organic Builder</div>
+    <div class="title">Organic Soup</div>
     
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
     
